<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <TableRow>
            <TextView
                android:id="@+id/USSDViewData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:textSize="18sp"
                android:textAlignment="center" />
        </TableRow>

        <TableRow>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TableRow>
                    <TableLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TableRow>

                            <ImageButton
                                android:id="@+id/startPhone"
                                android:layout_width="fill_parent"
                                android:layout_height="58dp"
                                android:layout_weight="1"
                                android:contentDescription="@string/listviewmenu_image_call"
                                app:srcCompat="@drawable/ic_listview_call" />
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/listviewmenu_call"
                                android:textAlignment="center"
                                android:textSize="10sp" />
                        </TableRow>
                    </TableLayout>

                    <TableLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TableRow>
                            <ImageButton
                                android:id="@+id/startShared"
                                android:layout_width="fill_parent"
                                android:layout_height="58dp"
                                android:layout_weight="1"
                                android:contentDescription="@string/listviewmenu_image_share"
                                app:srcCompat="@drawable/ic_listview_share" />
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/listviewmenu_share"
                                android:textAlignment="center"
                                android:textSize="10sp" />
                        </TableRow>
                    </TableLayout>

                    <TableLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TableRow>

                            <ImageButton
                                android:id="@+id/startClipboard"
                                android:layout_width="fill_parent"
                                android:layout_height="58dp"
                                android:layout_weight="1"
                                android:contentDescription="@string/listviewmenu_image_clipboard"
                                app:srcCompat="@drawable/ic_listview_copy_clipboard" />
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/listviewmenu_clipboard"
                                android:textAlignment="center"
                                android:textSize="10sp" />
                        </TableRow>
                    </TableLayout>

                    <TableLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TableRow>

                            <ImageButton
                                android:id="@+id/startFavorites"
                                android:layout_width="fill_parent"
                                android:layout_height="58dp"
                                android:layout_weight="1"
                                android:clickable="true"
                                android:contentDescription="@string/listviewmenu_image_mycodes"
                                app:srcCompat="@drawable/ic_menu_favorites" />
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/startFavoritesText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/listviewmenu_mycodes"
                                android:textAlignment="center"
                                android:textSize="10sp" />
                        </TableRow>
                    </TableLayout>
                </TableRow>
            </TableLayout>
        </TableRow>
    </TableLayout>
