<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ChangeNumber"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/ChangeUSSDView"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:text="@string/change_ussd"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/ChangeNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ChangeUSSDView"
            android:layout_alignLeft="@+id/ChangeUSSDView"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-1dp"
            android:layout_marginLeft="-1dp"
            android:layout_marginTop="76dp"
            android:text="@string/change_number"
            android:textSize="30sp" />

    <EditText
        android:id="@+id/ChangeEditNumber"
        android:layout_width="321dp"
        android:layout_height="48dp"
        android:layout_below="@+id/ChangeNumber"
        android:layout_alignStart="@+id/ChangeNumber"
        android:layout_alignLeft="@+id/ChangeNumber"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:background="@color/colorBackground"
        android:hint="@string/change_edit_number"
        android:ems="10"
        android:inputType="number"
        android:textColorLink="@color/colorOther" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/ChangeSuffics"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ChangeEditNumber"
        android:layout_alignStart="@+id/ChangeEditNumber"
        android:layout_alignLeft="@+id/ChangeEditNumber"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:text="@string/change_ostalos"
        android:textSize="30sp" />

</RelativeLayout>